# suns

./: Cargo.toml
presets/: preset.ron
src/: faculties.rs  main.rs
