[package]
name = "suns"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = { version = "0.13.0" }
lazy_static = { version = "1.4.0" }
json = { package = "serde_json", version = "1.0.86" }
serde = { version = "1.0.145", features = ["derive"] }
reqwest = { version = "0.11.12" }
calamine = { version = "0.18.0" }
ron = { version = "0.8.0" }
bytes = { version = "1.2.1" }
tap = { version = "1.0.1" }
anyhow = { version = "1.0.65" }

actix-web = { version = "4.2.1" }